<resources>
    <string name="app_name">MedLabs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TEST_FLIGHT_APP_ID">a9ef1a14-75ea-4a61-bbf0-e957ce1e7ec0</string>
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception"> Illegal arguments: Latitude %1$.8f Longitude %2$.8f </string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail"> Location update error. code %1$d message %2$s </string>
    <string name="location_update_missing_update"> Location update error. No incoming location. </string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress"> Can\'t request location updates, previous request hasn\'t finished </string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code"> Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="app_name_share">MedLabs Application</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="GPS_DISABLED">Gps Disabled</string>
    <string name="GPS_ENABLED">Gps Enabled</string>
    <string name="ar_schduale_house_call_title">جدولة مكالمة البيت</string>
    <string name="en_schduale_house_call_title">Schedule a House Call</string>
    <string name="ar_lab_locations_title">Lab Location</string>
    <string name="en_lab_locations_title">Lab Location</string>
    <string name="ar_lab_wise_title">LabWise</string>
    <string name="en_lab_wise_title">LabWise</string>
    <string name="ar_notifi_list_title">Notifications</string>
    <string name="en_notifi_list_title">Notifications</string>
    <string name="ar_test_results_title">Test Results</string>
    <string name="en_test_results_title">Test Results</string>
    <string name="en_sdb_title">"\"Sehtak Bil Denia\" Program"</string>
    <string name="en_checkups">"\"Sehtak Bil Denia\" Check-ups "</string>
    <string name="en_loyality">"\"Sehtak Bil Denia\" Loyalty Program "</string>
    <string name="en_loyality_points">Get Your Loyalty Points</string>
    <string name="en_loyality_sub1">My points</string>
    <string name="en_understainding">"Understanding your \"Sehtak Bil Denia\" Check-ups</string>
    <string name="en_gifts">"\"Sehtak Bil Denia\" Gift Voucher "</string>
    <string name="en_sdb_info_text">These check-ups include four groups of tests to check on your health and the health of your loved ones. They are carefully designed to highlight how ‘well’ the most important organs of your body are faring, and with each of the four check ups, more and more tests are added to get a more comprehensive picture of the status of your bodily functions.</string>
    <string name="house_call_full_name">Full Name</string>
    <string name="house_call_phone_no">Phone Number</string>
    <string name="house_call_date">Date :</string>
    <string name="house_call_city">City</string>
    <string name="house_call_area">Area</string>
    <string name="house_call_street_name">Street Name</string>
    <string name="house_call_building_no">Building Number</string>
    <string name="house_call_floor_no">Floor Number</string>
    <string name="house_call_submit">Submit</string>
    <string name="loyality_points_title">Please insert your card number</string>
    <string name="house_call_full_name_ar">الاسم الكامل </string>
    <string name="house_call_phone_no_ar">رقم الهاتف</string>
    <string name="house_call_date_ar">التاريخ :</string>
    <string name="house_call_city_ar">المدينه</string>
    <string name="house_call_area_ar">المنطقه</string>
    <string name="house_call_street_name_ar">الشارع</string>
    <string name="house_call_building_no_ar">رقم البناية</string>
    <string name="house_call_floor_no_ar">رقم العمارة</string>
    <string name="house_call_submit_ar">Submit</string>
    <string name="en_settings_title">Settings</string>
    <string name="ar_settings_title">الإعدادات</string>
    <string name="en_langauge">Language</string>
    <string name="ar_langauge">اللغة</string>
    <string name="en_english_label">English</string>
    <string name="ar_english_label">انجليزي</string>
    <string name="en_arabic_label">Arabic</string>
    <string name="ar_arabic_label">عربي</string>
    <string name="en_notification">Notifications</string>
    <string name="ar_notification">الإخطارات</string>
    <string name="feedback">Feedback</string>
    <string name="en_about_app">About Application</string>
    <string name="ar_about_app">عن التطبيق</string>
    <string name="en_help">Help</string>
    <string name="ar_help">مساعدة</string>
    <string name="click_here">Click Here</string>
    <string name="gift_introduction">Give your loved ones the gift of health by filling in a “Sehtak Bil Denia” voucher and we will send it to you or the intended person. You can pay at MedLabs Management Offices or through cash on delivery payment.</string>
    <string name="en_logout">Log Out</string>
    <string name="ar_logout">تسجيل الخروج</string>
    <string name="ABOUT_MEDLABS">Medical lab services directory published by Medlabs to enable users from browsing MedLabs Tests catalog and viewing detailed information about each test, also it enables users to receive and view their conducted tests results and schedule a house call visit. Medlabs app also provide full information about medlabs program”Sehtak Bil Denia” “صحتك بالدنيا” packages, included tests, fees and discounts .
\nFeatures:\n
1. Medlabs Tests’ Catalog.\n
2. Share test results with a doctor by email.\n
3. Schedule a house call visit with check team availability function.\n
4. Receive notification about new tests, promotion and health campaigns.\n
5. View Information about Sehtak Bil Denia program; program details, packages, included tests, fees.\n
6. Locate nearest Medlabs branch.\n
7. Bilingual Interface (Arabic/English).\n\n</string>
    <string name="ABOUT_MCC">"Mobilez Nation Company is a company specialized in developing customized mobile apps and in providing app-related services catering to both enterprises and individuals.\n"</string>
    <string name="Choose_lab">Choose Lab</string>
    <string name="LOGOUT_CANT_DO_THIS_OPERATION">You can\'t do this operation !!!</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="TXT_FB">Like us on Facebook</string>
    <string name="TXT_TW">Follow us on Twitter</string>
    <string name="TXT_INS">Follow us on Instagram</string>
    <string name="TXT_LIN">Connect on LinkedIn</string>
    <string name="TXT_YT">Subscribe us on Youtube</string>
    <string name="TXT_Q_1">How did you find the over all lab facility ?</string>
    <string name="TXT_Q_2">How did you find the level of hygiene ?</string>
    <string name="TXT_Q_3">How did you find the friendliness cooperativeness of the lab team ?</string>
    <string name="TXT_Q_4">How was your blood sample collection experience ?</string>
    <string name="TXT_Q_5">How did you find the lab bathroom ?</string>
    <string name="TXT_Q_6">How did you find the accuracy of the lab result appointment time ?</string>
    <string name="TXT_Q_7">Have you used our house call service ? if yes how did you find it ?</string>
    <string name="TXT_Q_8">Have you used our result online service ? if yes how did you find it ?</string>
    <string name="TXT_Q_9">Have you used our Website and Phone Application ? if yes how did you find it ?</string>
    <string name="Call_Confirm_message">Are you sure you want to request a house call?</string>
    <string name="phone_no">Phone No</string>
    <string name="username">Username</string>
    <string name="choose_country">Choose Country</string>
    <string name="please_fill_in_the_input_below">Please Fill in the input below:</string>
    <string name="cancel_new">Cancel</string>
    <string name="when">When</string>
    <string name="time">Time</string>
    <string name="jordan">Jordan</string>
    <string name="palsetine">Palsetine</string>
    <string name="add_your_address">Add Your Address:</string>
    <string name="pin_code">Pin Code</string>
    <string name="verify_your_phone_number_to_make_sure_your_account_remains_safe">Verify Your Phone number to make sure your account remains safe.</string>
    <string name="the_6_digit_code_is_sent_as_an_sms_to_you_phone_ndid_not_receive_code_try_in_20_sec">The 6 digit code is sent as an SMS to you phone.  Did not Receive? code try in 20 sec.</string>
    <string name="retry_in_20_sec">Retry in 20 sec</string>
    <string name="today_you_have_spent">Today you have spent</string>
    <string name="using_your_mobile">using your mobile.</string>
    <string name="hours">Hours</string>
    <string name="conformation">Conformation</string>
    <string name="are_your_sure_to_submit">Are Your Sure to Submit?</string>
    <string name="conform">Conform</string>
</resources>