<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:layoutDirection="ltr"
    android:orientation="vertical"
 >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp">

        <TextView
            android:layout_width="0dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_weight="1"
            android:text="@string/conformation"
            android:textColor="@color/red" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/_5sdp"

        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_1sdp">

        <TextView
            android:text="@string/are_your_sure_to_submit"
            android:layout_width="wrap_content"
            android:id="@+id/Message"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Change"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="@dimen/_1sdp"
            android:background="@color/red"
            android:text="@string/conform"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/Cross"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/red"
            android:text="@string/cancel_new"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>