<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp"
    android:paddingBottom="@dimen/_25sdp"
    tools:context="com.webmarke8.app.medlab.Fragments.Time_Used">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/today_you_have_spent"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/TextHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=" 7 hours "
            android:textColor="@color/red"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/using_your_mobile"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_13sdp" />

    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="@dimen/_30sdp"
            android:src="@drawable/time_used_circle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="7"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_40sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/hours"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>
    </RelativeLayout>


    <TextView
        android:id="@+id/YesterDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Yesterday,12 hours"
        android:textColor="@color/red"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold" />

</LinearLayout>
